fix: fix some twikoo.css issue on mobile

--- a/assets/css/components/twikoo.css
+++ b/assets/css/components/twikoo.css
@@ -232,14 +232,14 @@ html.dark {
 
 /* 评论区主题样式 */
 .tk-comments-container {
-    margin-top: 5px;
+    margin-top: 1.5rem;
 }
 
 .tk-comments-title {
     font-size: 1.25rem;
-    font-weight: bold;
-    color: var(--tk-text);
-    align-items: baseline;
+    font-weight: 600;
+    color: var(--foreground);
+    margin-bottom: 1.5rem;
     display: flex;
     justify-content: space-between;
 
@@ -279,6 +279,19 @@ html.dark {
         margin-right: 16px !important;
         object-fit: cover;
     }
+
+    @media (max-width: 768px) {
+        font-size: 0.875rem !important;
+        .tk-avatar.tk-has-avatar {
+            width: 2rem !important;
+            height: 2rem !important;
+        }
+
+        .tk-avatar-img {
+            width: 2rem !important;
+            height: 2rem !important;
+        }
+    }
 }
 
 .tk-main {
@@ -315,6 +328,11 @@ html.dark {
                 color: var(--cl-green);
                 transition: color 0.2s ease;
             }
+
+            @media (max-width: 768px) {
+                font-size: 0.875rem !important;
+                white-space: nowrap;
+            }
         }
 
         .tk-time {
@@ -344,6 +362,10 @@ html.dark {
 
         .tk-action-count {
             color: var(--cl-green);
+        }
+
+        @media (max-width: 768px) {
+            padding: 1px 3px;
         }
     }
 
@@ -412,12 +434,30 @@ html.dark {
 .tk-tag {
     border: none;
     border-radius: 4px;
-    margin-left: 6px;
+    margin: 0.5rem; /* 使用统一的外边距 */
     color: #fff;
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem; /* 设置字体大小 */
+    flex: 1; /* 使标签在容器中可伸缩 */
+    box-sizing: border-box; /* 包含内边距和边框在内的宽度计算 */
+    display: inline-block; /* 使标签在移动端横置 */
+    align-items: center; /* 垂直居中对齐 */
+    text-align: center;
 }
 
 .tk-tag-green {
     background-color: var(--cl-green);
+}
+
+/* 响应式设计 */
+@media (max-width: 768px) {
+    .tk-tag {
+        margin-left: 0;
+        margin-bottom: 0.5rem;
+        font-size: 0.75rem;
+        padding: 0 0.5rem;
+        white-space: nowrap;
+    }
 }
 
 .tk-admin {
